[gd_scene load_steps=19 format=3 uid="uid://dl4ax1hqnsxgr"]

[ext_resource type="Script" path="res://main.gd" id="1_garr5"]
[ext_resource type="PackedScene" uid="uid://bfep1cwaj77fp" path="res://Enemy.tscn" id="2_wi3po"]
[ext_resource type="PackedScene" uid="uid://dooiwfdjewl7d" path="res://Player.tscn" id="3_ln2o6"]
[ext_resource type="Texture2D" uid="uid://cgqg2o4d8dsb5" path="res://imgs/tile.png" id="4_ehmmi"]
[ext_resource type="Texture2D" uid="uid://w32aabokfhtp" path="res://imgs/seta2.png" id="5_pipg1"]
[ext_resource type="Script" path="res://TouchScreenButton.gd" id="6_op83a"]
[ext_resource type="Texture2D" uid="uid://d0okki5jjoik4" path="res://imgs/seta3.png" id="7_2sp0k"]
[ext_resource type="Texture2D" uid="uid://ds4cjbacumyog" path="res://imgs/seta.png" id="8_sqkn5"]
[ext_resource type="PackedScene" uid="uid://byauuukp2tbu5" path="res://moeda.tscn" id="9_waalb"]
[ext_resource type="AudioStream" uid="uid://dknsf2x2pa0u2" path="res://sounds/BeepBox-Song (1).wav" id="10_q0i13"]
[ext_resource type="FontFile" uid="uid://dwmcl437mfih4" path="res://fonts/Pixelify_Sans/static/PixelifySans-Regular.ttf" id="10_qco75"]
[ext_resource type="FontFile" uid="uid://bv3fc2ipepih7" path="res://fonts/Pixelify_Sans/static/PixelifySans-SemiBold.ttf" id="10_u0beh"]
[ext_resource type="PackedScene" uid="uid://q8kmlb5fxp5g" path="res://lanca.tscn" id="11_6p8cy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ebpkn"]
size = Vector2(263, 247)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t2rd6"]
size = Vector2(54, 374)

[sub_resource type="Curve2D" id="Curve2D_l7mf5"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -933.891, -335.32, 0, 0, 0, 0, -920.38, 1021.84, 0, 0, 0, 0, 2332.16, 1028.94, 0, 0, 0, 0, 2309.64, 483.474, 0, 0, 0, 0, 2302.43, -312.839, 0, 0, 0, 0, -931.189, -330.587)
}
point_count = 6

[sub_resource type="LabelSettings" id="LabelSettings_vhy0y"]
font_size = 32
outline_size = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1w67d"]
size = Vector2(3495.5, 155)

[node name="Main" type="Node2D"]
position = Vector2(-41, -23)
script = ExtResource("1_garr5")
mob_scene = ExtResource("2_wi3po")

[node name="CharacterBody2D" parent="." instance=ExtResource("3_ln2o6")]
position = Vector2(171, 446)

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
position = Vector2(21, 31)
ignore_rotation = false
zoom = Vector2(1.2, 1.2)
limit_smoothed = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(12, 37)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(170.5, 609.5)
shape = SubResource("RectangleShape2D_ebpkn")
debug_color = Color(0, 0.607843, 0.658824, 0.576471)

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(172.875, 610.125)
scale = Vector2(272.25, 255.75)

[node name="TextureRect" type="TextureRect" parent="StaticBody2D"]
offset_left = 35.0
offset_top = 486.0
offset_right = 302.0
offset_bottom = 745.0
texture = ExtResource("4_ehmmi")
expand_mode = 2
stretch_mode = 6

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(12, 37)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(1023, 610)
shape = SubResource("RectangleShape2D_ebpkn")
debug_color = Color(0, 0.607843, 0.658824, 0.576471)

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D2"]
position = Vector2(1022, 611)
scale = Vector2(272.25, 255.75)

[node name="TextureRect" type="TextureRect" parent="StaticBody2D2"]
offset_left = 483.0
offset_top = 520.0
offset_right = 749.0
offset_bottom = 772.0
texture = ExtResource("4_ehmmi")
expand_mode = 2
stretch_mode = 6

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2(12, 37)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2(616.406, 643.375)
shape = SubResource("RectangleShape2D_ebpkn")
debug_color = Color(0, 0.607843, 0.658824, 0.576471)

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D3"]
position = Vector2(615, 638)
scale = Vector2(266, 244)

[node name="TextureRect" type="TextureRect" parent="StaticBody2D3"]
offset_left = 890.0
offset_top = 484.0
offset_right = 1156.0
offset_bottom = 736.0
texture = ExtResource("4_ehmmi")
expand_mode = 2
stretch_mode = 6

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
position = Vector2(710, 477)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4"]
position = Vector2(4.5, -102)
shape = SubResource("RectangleShape2D_t2rd6")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D4"]
position = Vector2(-159, -217)
shape = SubResource("RectangleShape2D_t2rd6")

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D4"]
position = Vector2(3.99999, -104)
scale = Vector2(50, 364)

[node name="Sprite2D2" type="Sprite2D" parent="StaticBody2D4"]
position = Vector2(-158.625, -219.125)
scale = Vector2(55.25, 371.75)

[node name="TextureRect" type="TextureRect" parent="StaticBody2D4"]
offset_left = -190.0
offset_top = -402.0
offset_right = -132.0
offset_bottom = -33.0
texture = ExtResource("4_ehmmi")
expand_mode = 1
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="StaticBody2D4"]
offset_left = -22.0
offset_top = -290.0
offset_right = 31.0
offset_bottom = 81.0
texture = ExtResource("4_ehmmi")
expand_mode = 1
stretch_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TouchScreenButton" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(28, 567)
scale = Vector2(8.53125, 8.125)
texture_normal = ExtResource("5_pipg1")
action = "ui_left"
visibility_mode = 1
script = ExtResource("6_op83a")

[node name="TouchScreenButton3" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(1029, 442)
scale = Vector2(10.0625, 7.96875)
texture_normal = ExtResource("7_2sp0k")
action = "ui_accept"
visibility_mode = 1
script = ExtResource("6_op83a")

[node name="TouchScreenButton2" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(317, 567)
scale = Vector2(8.53125, 8.125)
texture_normal = ExtResource("8_sqkn5")
action = "ui_right"
visibility_mode = 1
script = ExtResource("6_op83a")

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(61.8149, -546.212)
scale = Vector2(1.11021, 1.69029)
curve = SubResource("Curve2D_l7mf5")

[node name="MobSpawnLocation" type="PathFollow2D" parent="Path2D"]
position = Vector2(-933.891, -335.32)
rotation = 1.56084

[node name="Mobtimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Enemy" parent="." instance=ExtResource("2_wi3po")]

[node name="Moeda" parent="." groups=["coins"] instance=ExtResource("9_waalb")]
position = Vector2(288, 502)

[node name="Moeda2" parent="." groups=["coins"] instance=ExtResource("9_waalb")]
position = Vector2(992, 487)

[node name="Moeda3" parent="." groups=["coins"] instance=ExtResource("9_waalb")]
position = Vector2(602, 530)

[node name="HUD" type="CanvasLayer" parent="."]
offset = Vector2(640, 20)
transform = Transform2D(1, 0, 0, 1, 640, 20)

[node name="Score" type="Label" parent="HUD"]
offset_left = -53.0
offset_top = -13.0
offset_right = 59.0
offset_bottom = 10.0
theme_override_fonts/font = ExtResource("10_qco75")
label_settings = SubResource("LabelSettings_vhy0y")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="HUD"]
offset_left = -628.0
offset_top = 4.0
offset_right = -464.0
offset_bottom = 35.0
theme_override_fonts/font = ExtResource("10_u0beh")
text = "Go back to menu"

[node name="GameTime" type="Timer" parent="."]
autostart = true

[node name="MapEnds" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="MapEnds"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapEnds/Area2D"]
position = Vector2(697.25, 1128)
shape = SubResource("RectangleShape2D_1w67d")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_q0i13")
volume_db = 0.3
autoplay = true

[node name="Lanca" parent="." instance=ExtResource("11_6p8cy")]

[connection signal="spearThrow" from="CharacterBody2D" to="." method="_on_character_body_2d_spear_throw"]
[connection signal="timeout" from="Mobtimer" to="." method="_on_mobtimer_timeout"]
[connection signal="body_entered" from="Moeda" to="Moeda" method="_on_body_entered"]
[connection signal="pegouMoeda" from="Moeda" to="." method="_on_moeda_pegou_moeda"]
[connection signal="body_entered" from="Moeda2" to="Moeda2" method="_on_body_entered"]
[connection signal="pegouMoeda" from="Moeda2" to="." method="_on_moeda_2_pegou_moeda"]
[connection signal="body_entered" from="Moeda3" to="Moeda3" method="_on_body_entered"]
[connection signal="pegouMoeda" from="Moeda3" to="." method="_on_moeda_3_pegou_moeda"]
[connection signal="pressed" from="HUD/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="GameTime" to="." method="_on_game_time_timeout"]
[connection signal="body_entered" from="MapEnds/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="activeSpear" from="Lanca" to="." method="_on_lanca_active_spear"]
